--- a/ansible/roles/nginx/tasks/main.yaml
+++ b/ansible/roles/nginx/tasks/main.yaml
@@ -11,10 +11,10 @@
   include: vhosts.yaml
   tags: vhost_conf
 
-#- name: Install nginx as proxy
-#  include: nginx_proxy.yaml
-#  tags: proxy
+- name: Install nginx as proxy
+  include: nginx_upstream.yaml
+  tags: proxy
 
-#- name: Install nginx as cache
-#  include: nginx_cache.yaml
-#  tags: cache
+- name: Install nginx as cache
+  include: nginx_cache.yaml
+  tags: cache
