--- a/docker/mattermost_cicd/.gitlab-ci.yml
+++ b/docker/mattermost_cicd/.gitlab-ci.yml
@@ -1,13 +1,8 @@
 # use docker image - docker in docker
-image docker:latest
+image: docker:latest
 
 before_script:
   - docker info
-  - apk update
-
-after_script:
-  - pip uninstall -y docker-compose
-  - apk del py-pip rsync
 
 stages:
   - build
@@ -16,11 +11,9 @@ stages:
 
 build:
   script:
-    # download docker compose then build
-    - apk add py-pip
-    - pip install docker-compose
-    - docker-compose --version
-    - docker-compose build
+    # build
+    - docker build -t mattermost_app app/
+    - docker build -t mattermost_web web/
     # push image to registry
     - docker tag mattermost_app 103.53.170.69:5000/mattermost_app
     - docker tag mattermost_web 103.53.170.69:5000/mattermost_web
@@ -32,22 +25,18 @@ build:
   only:
     - swat-demo
 
-# test with docker compose
-test:
-  script:
-    - docker-compose up
-  stage: test
-  tags:
-    - swat-demo
-  only:
-    - swat-demo
-
 # deploy to remote server via ssh
 deploy:
-  script:
+  before_script:
+    - apk update
     - apk add rsync
+    - apk add openssh-client
     - chmod +x deploy.sh
-    - ./deploy.sh deployer@103.53.171.121 1102
+  script:
+    - ./deploy.sh deployer@103.53.170.70 1102
+  after_script:
+    - apk del rsync
+    - apk del openssh-client
   stage: deploy
   tags:
     - swat-demo
