--- a/ansible/roles/nginx/defaults/main.yaml
+++ b/ansible/roles/nginx/defaults/main.yaml
@@ -6,7 +6,8 @@ nginx_install_dir: /etc/nginx
 nginx_vhosts_dir: "{{ nginx_install_dir }}/conf.d"
 nginx_conf: "{{ nginx_install_dir }}/conf/nginx.conf"
 nginx_log_dir: /var/log/nginx
-
+nginx_base_doc_root: /data
+nginx_doc_root: "{{ nginx_base_doc_root }}/www"
 nginx_pid: /run/nginx.pid
 nginx_error_log: "{{ nginx_log_dir }}/error.log"
 nginx_access_log: "{{ nginx_log_dir }}/access.log"
@@ -38,7 +39,7 @@ nginx_vhosts:
     log_dir: "{{ nginx_log_dir }}/{{ nginx_vhosts_name.0 }}"
     access_log: "{{ nginx_log_dir }}/{{ nginx_vhosts_name.0 }}/access.log"
     error_log: "{{ nginx_log_dir }}/{{ nginx_vhosts_name.0 }}/error.log"
-    root: "/data/www/{{ nginx_vhosts_name.0 }}"
+    root: "{{ nginx_doc_root }}/{{ nginx_vhosts_name.0 }}"
     client_max_body_size: 20M
     location0: {
         name: /
