Fix syntax in roles roles/mysql56/tasks/main.yaml, Add include vault in roles/mysql56/tasks/main.yaml, Add devel package in roles/mysql56/vars/RedHat7.yaml, modify logic in roles/mysql56/tasks/mysql_secure.yaml, Fix syntax in roles/mysql56/defaults/main.yaml, modify vhost in roles/nginx/defaults/main.yaml

--- a/ansible/playbooks/test.yaml
+++ b/ansible/playbooks/test.yaml
@@ -11,6 +11,6 @@
 
 - hosts: production_test
   roles:
-#    - role: mysql56
-    - role: nginx
-    - role: php7
+    - role: mysql56
+#    - role: nginx
+#    - role: php7
