--- a/ansible/roles/mysql56/defaults/main.yaml
+++ b/ansible/roles/mysql56/defaults/main.yaml
@@ -1,6 +1,6 @@
 mysql_port: 3306
 mysql_bind_address: "0.0.0.0"
-mysql_root_pass: {{ vault_mysql_root_passwd }}
+mysql_root_pass: "{{ vault_mysql_root_passwd }}"
 
 mysql_db:
   - name: foo
@@ -10,12 +10,12 @@ mysql_db:
 
 mysql_users:
   - name: benz
-    pass: {{ vault_mysql_user_passwd }}
+    pass: "{{ vault_mysql_user_passwd }}"
     priv: "*.*:ALL"
 
 mysql_repl_user:
   - name: repl
-    pass: {{ vault_mysql_repl_passwd }}
+    pass: "{{ vault_mysql_repl_passwd }}"
 
 mysql_repl_role: master
 mysql_db_id: 7
