--- a/ansible/roles/mysql56/tasks/main.yaml
+++ b/ansible/roles/mysql56/tasks/main.yaml
@@ -1,27 +1,15 @@
 ---
 - name: Add the OS specific variables
-  include_vars: "{{ ansible_os_family }}{{ ansible_distribution_major_version }}.yml"
+  include_vars: "{{ ansible_os_family }}{{ ansible_distribution_major_version }}.yaml"
+
+- include_vars: vault/main.yaml
+  tags: include
 
 - name: Install mysql packages
   include: install_packages.yaml
 
-- name: Copy the my.cnf file
-  template: src=my.cnf.{{ ansible_os_family }}.j2 dest={{ mysql_conf_dir }}/my.cnf
-  notify:
-   - restart mysql
-
-- name: Create the directory /etc/mysql/conf.d
-  file: path=/etc/mysql/conf.d state=directory
-  notify:
-   - restart mysql
-
-- name: Deploy mysql config to conf.d
-  template: src=mysql.cnf.j2 dest=/etc/mysql/conf.d/mysql.cnf
-  notify:
-    - restart mysql
-
-- name: Start the mysql services
-  service: name={{ mysql_service }} state=started enabled=yes
+- name: Config mysql
+  include: mysql_config.yaml
 
 - name: Run mysql_secure_installation
   include: mysql_secure.yaml
