--- a/ansible/roles/mysql56/tasks/mysql_secure.yaml
+++ b/ansible/roles/mysql56/tasks/mysql_secure.yaml
@@ -4,13 +4,12 @@
    - 127.0.0.1
    - ::1
    - localhost
-  when: ansible_hostname == 'localhost'
 
 - name: copy .my.cnf file with root password credentials
   template: src=.my.cnf.j2 dest=~/.my.cnf mode=0600
 
 - name: ensure anonymous users are not in the database
-  mysql_user: name='' host={{ item }} state=absent host_all=yes
+  mysql_user: name='' state=absent host_all=yes
 
 - name: remove the test database
   mysql_db: name=test state=absent
