--- a/ansible/roles/mysql56/tasks/mysql_secure.yaml
+++ b/ansible/roles/mysql56/tasks/mysql_secure.yaml
@@ -8,6 +8,9 @@
 - name: copy .my.cnf file with root password credentials
   template: src=.my.cnf.j2 dest=~/.my.cnf mode=0600
 
+- name: remove root user on hostname
+  mysql_user: name='root' state=absent host="{{ ansible_hostname }}"
+
 - name: ensure anonymous users are not in the database
   mysql_user: name='' state=absent host_all=yes
 
