--- a/ansible/inventories/hosts.yaml
+++ b/ansible/inventories/hosts.yaml
@@ -1,8 +1,1 @@
-[development_test]
-test1 ansible_host=103.53.170.69 hostname=test1 ansible_port=22
-
-[staging_test]
-test2 ansible_host=103.53.170.70 hostname=test2
-
-[production_test]
-test3 ansible_host=103.53.171.121 hostname=test3
+/home/manhdung/Dropbox/Scripts_Official/AnsibleNotShared/ansible/inventories/hosts.yaml
