--- a/ansible/roles/nginx-proxy/defaults/main.yaml
+++ b/ansible/roles/nginx-proxy/defaults/main.yaml
@@ -66,7 +66,7 @@ nginx_vhosts:
 
     upstream: {
         name: "{{ nginx_vhosts_name.0 }}",
-        server:  ["103.53.170.70:80"]
+        server:  ["backend1.localhost:80"]
       }
 
     cache: {
