--- a/configs/apache/config-virtual-host/.htaccess
+++ b/configs/apache/config-virtual-host/.htaccess
@@ -1,5 +1,8 @@
+/data/www/ninja/.htaccess
+```
 AuthType Basic
 AuthName "Restricted web page"
 AuthBasicProvider file
 AuthUserFile "/etc/httpd/conf/.htpasswd"
 Require valid-user
+```
