--- a/configs/apache/config-virtual-host/vhost.conf
+++ b/configs/apache/config-virtual-host/vhost.conf
@@ -1,3 +1,5 @@
+/etc/httpd/conf.d/vhost.conf
+```
 <VirtualHost *:80>
    DocumentRoot /data/www/ninja
    ServerName www.ninja.com
@@ -11,3 +13,4 @@
    </Directory>
 
 </VirtualHost>
+```
