--- a/configs/nginx/config-vhost/vhost.conf
+++ b/configs/nginx/config-vhost/vhost.conf
@@ -2,10 +2,10 @@
 server {
 
   index index.php index.html;
-  server_name postfixadmin.lab.com www.postfixadmin.lab.com;
-  error_log /var/log/nginx/postfixadmin.lab.com/error.log;
+  server_name postfixadmin.lab.local www.postfixadmin.lab.local;
+  error_log /var/log/nginx/postfixadmin.lab.local/error.log;
   client_max_body_size 20M;
-  access_log /var/log/nginx/postfixadmin.lab.com/access.log;
+  access_log /var/log/nginx/postfixadmin.lab.local/access.log;
   root /var/www/html/postfixadmin;
   listen 80;
 
