--- a/ansible/roles/common/tasks/secure.yaml
+++ b/ansible/roles/common/tasks/secure.yaml
@@ -3,12 +3,14 @@
 
 - name: Disable firewall
   service: name="firewalld" enabled=no state=stopped
+  ignore_errors: true
   when:
     - ansible_distribution == "{{ distro_centos.name }}"
     - ansible_distribution_major_version == "{{ distro_centos.version7 }}"
 
 - name: Disable firewall
   service: name="iptables" enabled=no state=stopped
+  ignore_errors: true
   when:
     - ansible_distribution == "{{ distro_centos.name }}"
     - ansible_distribution_major_version == "{{ distro_centos.version6 }}"
