--- a/ansible/roles/common/vars/main.yaml
+++ b/ansible/roles/common/vars/main.yaml
@@ -4,13 +4,11 @@ nameservers: |
    nameserver 208.67.222.222
    nameserver 208.67.220.220
 
-elrepo_centos_7_url: http://www.elrepo.org/elrepo-release-7.0-2.el7.elrepo.noarch.rpm
-elrepo_centos_6_url: http://www.elrepo.org/elrepo-release-6-6.el6.elrepo.noarch.rpm
-elrepo_centos_5_url: http://www.elrepo.org/elrepo-release-5-5.el5.elrepo.noarch.rpm
+#elrepo_centos_7_url: http://www.elrepo.org/elrepo-release-7.0-2.el7.elrepo.noarch.rpm
+#elrepo_centos_6_url: http://www.elrepo.org/elrepo-release-6-6.el6.elrepo.noarch.rpm
 
 remi_centos_7_url: http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
 remi_centos_6_url: http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
-remi_centos_5_url: http://rpms.famillecollet.com/enterprise/remi-release-5.rpm
 
 distro_centos:
   name: CentOS
